<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Genç Yazılımcı</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="get_Awards">Get Awards</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_nick">Username</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="homepage">Homepage</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string-array name="education_level">
        <item>pre-school education</item>
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Other</item>
    </string-array>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="primary_school">Primary School</string>
    <string name="level_1">Level 1</string>
    <string name="welcome">Welcome</string>
    <string name="information_2">After light is perceived by living things, it is interpreted and made meaningful according to the organs each living thing has and the abilities of these organs. That\'s why, every living things see objects differently.</string>
    <string name="information_1">The first thing required for the act of seeing to occur is light. </string>
    <string name="information_title">How does living things see?</string>
    <string name="alive">Living Thing</string>
    <string name="snake">Snake</string>
    <string name="bee">Bee</string>
    <string name="bat">Bat</string>
    <string name="rabbit">Rabbit</string>
    <string name="computer">Computer ?</string>
    <string name="moveOn">Move On</string>
    <string name="didYouReadInfo">Did you read the info?</string>
    <string name="iRead">Yes, i have read</string>
    <string name="code">Code</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="reallyCant">Your really did not see that? \n Look closer…</string>
    <string name="really">Did you really saw there a number 8 :(</string>
    <string name="cant_see">Are you pretty sure to see that?</string>
    <string name="againLook">Since you are so sure.\n Lets look it again :)</string>
    <string name="stillSee">Are you sure you still see the number 8?</string>
    <string name="sureNoSee">Do not worry you still have your coins.\n I was sure that you did not see :)</string>
    <string name="sureSee">Do not worry you still have your coins.\n I was sure that you see that :)</string>
    <string name="absolutelyNot">There certainly are not. \n Or else… maybe we do not see that?</string>
    <string name="closeLook">Lets change the color a little bit.</string>
    <string name="nowSee">Now you can see that a little bit.</string>
    <string name="hardLook">You really did not see that :(</string>
    <string name="hereItIs">Now, it is impossible to not to see</string>
    <string name="congrats">Congratulations.\n Now we are ready for see all of it.</string>
    <string name="congratulations_gift">Congratulations, you won the\u0020</string>
    <string name="play_again">Play Again</string>
    <string name="ready_for_the_game">Ready for the game?</string>
    <string name="stillNo">Can you see that now?</string>
    <string name="hereEight">Here is a number 8.</string>
    <string name="more">You look like ready for more.</string>
    <string name="perfect">Perfect. \n Lets see that better.</string>
    <string name="sure">Are you pretty sure that you did not see? :)</string>
    <string name="machine_how_see">How the machines see?</string>
    <string name="eight_on_the_wall">Our ability to distinguish objects depends entirely on their colour. For example, lets think about a number 8 hanging on the wall.</string>
    <string name="same_color_wall_eight" tools:ignore="Typos">Do you think you can see that if it was the same color as wall?</string>
    <string name="is_there_eight">Is there a number 8 on this wall?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="important_color">As you can see the pictures above, to identify an object, color are very important.</string>
    <string name="machine_equals_string">Each color has a numerical equivalent for machines. The graphic below tells you this simply.</string>
    <string name="question_robot_see">Do you want to learn to how a robot can see?</string>
    <string name="wantTenGoldLose">You look like you want to lose 10 coins.</string>
    <string name="loseTenGold">I am sorry you lost 10 coins.</string>
    <string name="saw">I saw</string>
    <string name="noSaw">I did not see</string>
    <string name="how_robot_does">You did learn how can living things can see. So how can robots distinguish these colors?</string>
    <string name="close_eight">1-) Lets look closer to number 8 that drawn at the first picture on the wall.</string>
    <string name="string_to_hash">2-) We digitized the colors with the information we learned in the second image.</string>
    <string name="machine_look">3-) In the last image, we see what a machine sees by looking at the number 8 on the wall.</string>
    <string name="learn">Lets learn</string>
    <string name="click_look">Please touch the picture to look closer.</string>
    <string name="are_u_sure_exit">Are you sure that you want to exit?</string>
    <string name="againClickExit">Please press again to exit.</string>
    <string name="achievement">Achievements</string>
    <string name="neural_network_model">Neural Network Model</string>
    <string name="real_neural_cell">Real Neural Cell</string>
    <string name="no_user_data">User data not found.</string>
    <string name="earned_gold">Coins have earned.</string>
    <string name="earn_thirty_gold">30 coins have earned</string>
    <string name="earn_ten_gold">10 coins have earned</string>
    <string name="earn_five_gold">5 coins have earned</string>
    <string name="todo">TODO</string>
    <string name="machine_view">Machine View</string>
    <string name="default_coin">10</string>
    <string name="error_occurred">Error Occurred.</string>
    <string name="not_seen">Have not seen</string>
    <string name="not_answered">Have not answered</string>
    <string name="congratulations">Congratulations, you won!</string>
    <string name="press_mine">You stepped on a mine!</string>
    <string name="already_seen">Already Seen</string>
    <string name="already_answered">Already Answered</string>
    <string name="havent_seen">Have not Seen</string>
    <string name="havent_answered">Have not Answered</string>
    <string name="true_answer">True, you can continue!</string>
    <string name="wrong_answer">Wrong answer. Restart the game.</string>
    <string name="answer_one" tools:ignore="Typos">answer1</string>
    <string name="answer_two">answer2</string>
    <string name="answer_three">answer3</string>
    <string name="answer_four">answer4</string>
    <string name="please_answer">Please answer the question.</string>
    <string name="all_question_answered">You answer all the questions correctly. Congratulations!</string>
    <string name="empty" />
    <string name="add">Add</string>
    <string name="prize_island">Prize Island</string>
    <string name="prize_updated_as">\u0020prize update as\u0020</string>
    <string name="coin_updated_as">\u0020coin\u0020</string>
    <string name="this_awards_delete">\u0020prize have been deleted.</string>
    <string name="machine_machine_neural">Can a machine literally learn and think like a human?</string>
    <string name="machine_machine_neural_info_two">The answer to this question should probably be no, while the human brain has not yet fully understood by humanity.</string>
    <string name="machine_machine_info_three">As a result of the developed technologies and many researches, the machines have gained great capabilities. Some of these are as follows:</string>
    <string name="machine_machine_info_four">- Answering the questions \n- Making physically moves\n- Ability to detect objects</string>
    <string name="machine_machine_neural_info_five">We will learn a lot about machines that have many more abilities apart from these mentioned.</string>
    <string name="machine_can_teach_info_one">We learned a little about the human brain and what machines can learn.</string>
    <string name="machine_can_teach_info_two">So, can a machine start teaching people what it has learned?</string>
    <string name="machine_can_teach_info_three">Although machines can gain the ability to learn on their own, they are not comparable to humans.</string>
    <string name="machine_can_teach_info_four">With the development of technology, machines that are constantly developing may be much more advanced than the human brain in the future.</string>
    <string name="machine_can_teach_info_five">The biggest obstacle to achieving this is that the people who will develop these technologies are not working enough in this field.</string>
    <string name="machine_can_teach_info_six">We can accomplish that together.</string>
    <string name="education_one_info_one">Artificial intelligence is the ability of a computer system to mimic human cognitive functions such as learning and problem solving.</string>
    <string name="education_one_info_two">The term artificial intelligence was first coined in 1956 at a conference held at Dartmouth College in New Hampshire, England.</string>
    <string name="education_one_info_three">However, the reason why artificial intelligence is not so popular today is the increasing number of data that can be analyzed in our developing world.</string>
    <string name="education_one_info_four">In addition, the capabilities of artificial intelligence include functions such as understanding human speech, playing games that require counter-move, controlling devices that require autonomous operation, data analysis, military simulation, and photo-video analysis.</string>
    <string name="basic_ai">Artificial Intelligence Fundamentals</string>
    <string name="ai_summary">Long story short, machines try to learn, understand and apply by imitating the way human nerve cells work. In this way, he can make the objects he sees or perceive meaningful by passing them through artificial neural networks. The more artificial neural networks can be developed, the more accurate results the machines will produce.</string>
    <string name="ai_summary_title">The A.I.</string>
    <string name="classification">Classification</string>
    <string name="clustering">Clustering</string>
    <string name="algorithm">Algorithm</string>
    <string name="education_threetwo_info_one">In classification, a dataset is assigned to one of the different and predetermined classes. Classification algorithms are based on learning which data to assign to which class from the given training set.</string>
    <string name="education_threetwo_info_two">Clustering is the grouping of data showing similar characteristics in a data set. Within the same cluster, the similarities are high, and the similarities between the clusters are low. </string>
    <string name="education_three_two_info_three">It is the logical, sequential expression of all the operations needed to solve a problem. The concept of algorithm can be used in programming or software development, as well as activities in daily life, mathematics, etc. It provides the opportunity to solve the problems encountered in the lessons more easily.</string>
    <string name="introduction_ai">Introduction to Artificial Intelligence</string>
</resources>