<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/card_education"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mainviews.artificialintelligence.aieducation.EducationThreetwo">

    <TextView
        android:id="@+id/nameTextYSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_ai"
        android:textColor="@color/card_education"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/classification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/classification"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/classificationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/education_threetwo_info_one"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />
        <TextView
            android:id="@+id/clustering"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:visibility="invisible"
            android:text="@string/clustering"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/clusteringInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/education_threetwo_info_two"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/classvsclus"
            android:layout_gravity="center"
            android:background="@drawable/classification_vs_clustring"
            android:visibility="invisible"
            android:layout_marginBottom="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/algorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/algorithm"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/algorithmInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/education_three_two_info_three"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>