<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/machine_can_teach_background_color"
    app:layoutDescription="@xml/fragment_machine_can_teach_scene"
    tools:context=".view.mainviews.machinelearning.MachineCanTeachFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/machineCanTeachImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize15"
        android:src="@drawable/student_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/machineCanTeachInfoOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:text="@string/machine_can_teach_info_one"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachImage" />

    <TextView
        android:id="@+id/machineCanTeachInfoTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/machine_can_teach_info_two"
        android:textAlignment="center"
        android:textColor="@color/machine_can_teach_text_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachInfoOne" />

    <TextView
        android:id="@+id/machineCanTeachInfoThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:text="@string/machine_can_teach_info_three"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachImage" />

    <TextView
        android:id="@+id/machineCanTeachInfoFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:text="@string/machine_can_teach_info_four"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachInfoThree" />

    <TextView
        android:id="@+id/machineCanTeachInfoFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:text="@string/machine_can_teach_info_five"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachInfoFour" />

    <TextView
        android:id="@+id/machineCanTeachInfoSix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:text="@string/machine_can_teach_info_six"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachInfoFive" />

    <Button
        android:id="@+id/machineCanTeachButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/machine_learning_button"
        android:text="@string/moveOn"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineCanTeachInfoSix" />

</androidx.constraintlayout.motion.widget.MotionLayout>