<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/machine_human_background_color"
    tools:context=".view.mainviews.machinelearning.MachineMachineNeuralFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/machineMachineImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/machine_think"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/machineMachineInfoOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gothombook"
        android:justificationMode="inter_word"
        android:text="@string/machine_machine_neural"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineImage"/>

    <TextView
        android:id="@+id/machineMachineInfoTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gothombook"
        android:justificationMode="inter_word"
        android:text="@string/machine_machine_neural_info_two"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineInfoOne"/>

    <TextView
        android:id="@+id/machineMachineInfoThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gothombook"
        android:justificationMode="inter_word"
        android:text="@string/machine_machine_info_three"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineInfoTwo"/>

    <TextView
        android:id="@+id/machineMachineInfoFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:lineSpacingExtra="2dp"
        android:fontFamily="@font/gothombook"
        android:justificationMode="inter_word"
        android:text="@string/machine_machine_info_four"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineInfoThree"/>

    <TextView
        android:id="@+id/machineMachineInfoFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:lineSpacingExtra="2dp"
        android:fontFamily="@font/gothombook"
        android:justificationMode="inter_word"
        android:text="@string/machine_machine_neural_info_five"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineInfoFour"/>

    <Button
        android:id="@+id/machineMachineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveOn"
        android:backgroundTint="@color/machine_learning_button"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/machineMachineInfoFive" />

</androidx.constraintlayout.widget.ConstraintLayout>