<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_education_background"
    app:layoutDescription="@xml/fragment_education_one_scene"
    tools:context=".view.mainviews.artificialintelligence.aieducation.EducationOne">

    <TextView
        android:id="@+id/education_one_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/introduction_ai"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/education_one_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ai_feelings"
        app:layout_constraintEnd_toEndOf="@id/education_one_title"
        app:layout_constraintStart_toStartOf="@id/education_one_title"
        app:layout_constraintTop_toBottomOf="@id/education_one_title" />

    <TextView
        android:id="@+id/education_one_info_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="4dp"
        android:text="@string/education_one_info_one"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_one_image" />

    <TextView
        android:id="@+id/education_one_info_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="4dp"
        android:text="@string/education_one_info_two"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_one_info_one" />

    <TextView
        android:id="@+id/education_one_info_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="4dp"
        android:text="@string/education_one_info_three"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_one_info_two" />

    <TextView
        android:id="@+id/education_one_info_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="4dp"
        android:text="@string/education_one_info_four"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_one_info_three" />

    <Button
        android:id="@+id/education_one_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:backgroundTint="@color/gift_button_background_color"
        android:text="@string/moveOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/education_one_info_one"
        app:layout_constraintStart_toStartOf="@id/education_one_info_one" />

    <Button
        android:id="@+id/education_one_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gift_button_background_color"
        android:text="@string/moveOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/education_one_info_one"
        app:layout_constraintStart_toStartOf="@id/education_one_info_one" />

</androidx.constraintlayout.motion.widget.MotionLayout>

