<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_education_nine_background"
    tools:context=".view.mainviews.artificialintelligence.aieducation.EducationNine">

    <TextView
        android:id="@+id/education_nine_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_summary_title"
        android:textColor="@color/button_move_on_color"
        android:fontFamily="@font/gotham_bold"
        android:textSize="36sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/education_nine_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ai_summary"
        android:textColor="@color/white"
        android:lineSpacingExtra="5dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/gotham_book"
        android:justificationMode="inter_word"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_nine_title" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/education_nine_gif"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/classification_gif"
        app:layout_constraintStart_toStartOf="@id/education_nine_info"
        app:layout_constraintEnd_toEndOf="@id/education_nine_info"
        app:layout_constraintTop_toBottomOf="@id/education_nine_info" />

    <Button
        android:id="@+id/education_nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/fragment_education_two_button_color"
        android:text="@string/moveOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_nine_gif"/>

</androidx.constraintlayout.widget.ConstraintLayout>